fix row alignment

--- a/src/scripts/compactNav.css
+++ b/src/scripts/compactNav.css
@@ -2,6 +2,7 @@
   gap: .75rem;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
 }
 
 .nav-container .logo {
